--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,7 +15,7 @@ set $right l
 set $term alacritty
 
 # Application launcher
-set $menu $term --class=launcher -e sway-launcher-desktop
+set $menu $term --class=launcher -e /home/ruir/.config/sway/scripts/sway-launcher-desktop
 for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 3
 
 ### Output configuration
