--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -122,6 +122,6 @@
     },
     "custom/power": {
         "format": "",
-        "on-click": "swaynag -t warning -m 'Power Menu Options' -b 'Logout' 'swaymsg exit' -b 'Suspend' 'swaymsg exec systemctl suspend' -b 'Shutdown' 'exec systemctl poweroff'"
+        "on-click": "swaynag -t warning -m 'Power Menu Options' -b 'Logout' 'swaymsg exit' -b 'Suspend' 'swaymsg exec systemctl suspend' -b 'Reboot' 'exec systemctl reboot' -b 'Shutdown' 'exec systemctl poweroff'"
     }
 }
