--- a/.config/sway/config
+++ b/.config/sway/config
@@ -21,7 +21,7 @@ for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 p
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /home/ruir/Pictures/Wallpapers/red_sun.jpg fill
+output * bg /home/ruir/Pictures/Wallpapers/catfish.jpg fill
 #
 # Example configuration:
 #
@@ -193,7 +193,7 @@ include /etc/sway/config.d/*
 #
 # Misc.:
 #
-default_border none
+default_border pixel 3
 font SF Pro Display
 gaps inner 5
 smart_gaps on
@@ -229,7 +229,14 @@ for_window {
 # Startup:
 #
 exec {
+    wal -R
     xsettingsd
     wlsunset -l 45.0 -L -10.0
     blueman-applet
 }
+
+# Change border colors
+client.focused #4c7899 #285577 #ffffff #285577 #285577
+
+# Disable borders when there is only one open window
+hide_edge_borders smart_no_gaps
