Add Starship config

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -12,7 +12,7 @@
     //     "sway/window"
     // ],
     "modules-right": [
-        "keyboard-state",
+        // "keyboard-state",
         "pulseaudio",
         "network",
         "backlight",
