--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,4 +1,4 @@
-font=Cantarell
-image=/home/ruir/Pictures/Wallpapers/red_sun.jpg
+font=Inter
+image=/home/ruir/Pictures/Wallpapers/catfish.jpg
 
 indicator-idle-visible
