Auto wallpaper switch on lockscreen

--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,4 +1,4 @@
-font=Inter
-image=/home/ruir/Pictures/Wallpapers/catfish.jpg
+font=Cantarell
+image=$(cat ~/.cache/wal/wal)
 
 indicator-idle-visible
