--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -32,5 +32,37 @@ schemes:
       magenta: '0xd3869b'
       cyan:    '0x89b482'
       white:   '0xd4be98'
+  catppuccin: &catppuccin
+    # Default colors
+    primary:
+      background: '#1E1E28'
+      foreground: '#DADAE8'
+    # Colors the cursor will use if `custom_cursor_colors` is true
+    cursor:
+      text: '#1E1E28'
+      cursor: '#B1E3AD'
+    # Normal colors
+    normal:
+      black:   '#6E6C7E'
+      red:     '#E38C8F'
+      green:   '#B1E3AD'
+      yellow:  '#EBDDAA'
+      blue:    '#A4B9EF'
+      magenta: '#C6AAE8'
+      cyan:    '#E5B4E2'
+      white:   '#DADAE8'
+    # Bright colors
+    bright:
+      black:   '#6E6C7E'
+      red:     '#E38C8F'
+      green:   '#B1E3AD'
+      yellow:  '#EBDDAA'
+      blue:    '#A4B9EF'
+      magenta: '#C6AAE8'
+      cyan:    '#E5B4E2'
+      white:   '#DADAE8'
+    indexed_colors:
+      - { index: 16, color: '#F2CECF' }
+      - { index: 17, color: '#3E4058' }
 
-colors: *gruvbox_material_medium_dark
+colors: *catppuccin
