--- a/.config/sway/config
+++ b/.config/sway/config
@@ -36,6 +36,8 @@ output * bg $wallpaper fill
 #   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
+output eDP-1 position 0,0
+output HDMI-A-1 position 1920,0 mode 1920x1080@60.000Hz
 
 ### Idle configuration
 #
@@ -202,17 +204,19 @@ include /etc/sway/config.d/*
 # Misc.:
 #
 default_border pixel 1
-font Roboto 10
+font Inter 10
 titlebar_border_thickness 0
 gaps inner 5
-smart_gaps on
+gaps bottom -5
+# smart_gaps on
 
 # Control brightness
 bindsym XF86MonBrightnessUp exec brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
 
 # Take a screenshot
-bindsym Print exec --no-startup-id slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
+bindsym Print exec grimshot copy area
+bindsym Shift+Print exec grimshot save area
 
 # Lock screen
 bindsym $mod+l exec swaylock
@@ -254,3 +258,5 @@ hide_edge_borders smart_no_gaps
 # Start gnome-keyring-deamon
 exec eval $(gnome-keyring-daemon --start)
 exec export SSH_AUTH_SOCK
+
+exec lxpolkit
