--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,6 +1,6 @@
 {
     // "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
+    "position": "bottom", // Waybar position (top|bottom|left|right)
     //"height": 24, // Waybar height (to be removed for auto height)
     "margin": 0,
     // "width": 1280, // Waybar width
@@ -66,8 +66,8 @@
         // "device": "acpi_video1",
         "format": "{percent}% {icon}",
         "format-icons": [
-            "",
-            ""
+            ""
+            // ""
         ]
     },
     "battery": {
@@ -104,8 +104,8 @@
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
         "format-muted": " {format_source}",
         "format-source": "   {volume}% ",
         "format-source-muted": "   ",
