Add misc. changes

--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -47,6 +47,6 @@
 # SWIPE GESTURES:
 ###############################################################################
 
-gesture swipe down	alacritty --class=launcher -e /home/ruir/.config/sway/scripts/sway-launcher-desktop
+# gesture swipe down	alacritty --class=launcher -e /home/ruir/.config/sway/scripts/sway-launcher-desktop
 gesture swipe left	swaymsg -t command workspace next_on_output
 gesture swipe right	swaymsg -t command workspace prev_on_output
