Update mpv subtitles

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,8 +1,8 @@
 save-position-on-quit
-sub-font='Avenir LT Pro'
+sub-font='CooperHewitt-Medium'
 sub-font-size=42
 #sub-color="#B1AB16"
-#sub-color="#CDCDCD"
+sub-color="#DDDDDD"
 sub-border-size=1.5
 sub-shadow-offset=1.5
 sub-shadow-color="#AA000000"
