--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,4 +2,9 @@ backend = "glx";
 vsync = true;
 
 fading = true;
-fade-delta = 4;
+fade-delta = 3;
+
+# corner-radius = 8;
+rounded-corners-exclude = [
+  "! name~=''",    # exclude windows with no name, such as Qtile's bar
+];
