update dotfiles to work with Fedora

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -13,6 +13,15 @@ packages:
     - 'zip'
     cargo:
     - 'navi'
+    dnf:
+    - 'bat'
+    - 'direnv'
+    - 'dtrx'
+    - 'fzf'
+    - 'git'
+    - 'ncdu'
+    - 'ranger'
+    - 'zip'
     pip:
   work:
     apt:
